# sleepygpt

./: pyproject.toml
sleepygpt/cli/: _main.py  main.py
sleepygpt/lib/: _sleepygpt.py
