[tool.poetry]
name = "sleepygpt"
version = "0.1.0"
description = ""
authors = ["Jon Bringhurst <jon@bringhurst.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.0"
torchvision = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
